# bill_clye

./: .gitignore  .markdownlint.json  .throw.md  AGENTS.md  CHANGELOG.md  README.md  TODO.md  cli.md  main.py  pyproject.toml  query.md  spec.md  table_database.md
.hypothesis/constants/: 01eac5cc3af22001  03bbd4d91c682243  048f1d250a58f189  04ee1f3db71b08cd  05c59156cf577798  081eb44ef7ad8d4e  085aa89d539dcc37  0b577630d20eca40  0b5a17095f3b667b  0c4ed4295c13fb50  0d4bb06ac2bdcf19  0df4072e1762de14  0e892383f579432b  0f6c0b78285eb4da  1465ed6fa769df35  1634f0b63bc7ec93  183a005870c98ef0  1d6d11e3c3349ba6  1e26385bd7c397ad  1e7110a0014f4f45  229fb249dab94e29  23a2bd369e7bf8fa  23bb79182b52b622  27460474615c7508  28bc9db486a2a910  2aac94bdc9a795ff  2d8b968556af10fc  2e3d7c08274b4837  2ea1ada4cb4e33c3  2f99f6b57729210e  2fe26ab2841c45c5  30f4dbd9920d0e60  33240cdf00fa3340  3384ee04b2b00e04  35d2363c53f0d93d  361201878cf93a6a  36de2da1878a0ffe  3bdfdf50aec5dbb9  3d1a9fbe8080f666  3f11e998e3535b70  (+72 more)
.shelved_features/: advanced_udl_docstring.md  docstring_deepdive.md
.shelved_features/resources/: academic_adv_markdown.md  serena_training.md
database/: docstring_db.json  docstring_examples.md  docstring_tables.md  tables.md
database/conflicts/: conflict_database.json
database/delimeters/: delimeters.md
database/dictionary/: dictionary_database.json
docs/: TODO.md  dictionary.md  doctags.md  repository_tree.md  visual_pattern_lib.md
src/mrdr/: __init__.py  (+2 more)
templates/: docstring_template.md  todo_template.md
tests/: __init__.py  conftest.py  test_integration.py
(+1094 files in other folders)
